--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio</title>
   <script src="https://kit.fontawesome.com/f43f2f9ffa.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./index.html" />
+  <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="https://use.typekit.net/plr0zsq.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
